#828: Integrate Event Framework (#24)
* Update dependencies.
* Resolve vulnerabilites
* Bump version
* Integrate event framework.
* Update unit tests
* Update license
* Integrate sidecar
* Log all requests through sidecar
* Add sidecar NullClient tests
* Add unit tests for sidecar
* Update sidecar tests
* Add Sidecar logRequest test
* Update cs-shared
* Add sidecar 'close' event test
* Add sidecar health status
* Fix test coverage
* Fix test coverage
* Clear audit-resolve file
* Remove sidecar config
* Remove unused dependencies and configs
* Remove unused dependencies
* Update dependencies
* Formatting
* Fix event bug. Update test
* Update span util and tests
* Resolve audit issues: ignore vulnerabilities in "minimist" for a week
* Update version to 9.4.0
